2006-09-29  Ulrich Drepper  <drepper@redhat.com>

	* libio/wmemstream.c: Include <wchar.h>.
	* libio/bug-wmemstream1.c: Likewise.
	* libio/tst-wmemstream1.c: Likewise.
	* libio/tst-wmemstream2.c: Likewise.

	* version.h (RELEASE): Bump to 2.5.
	* README: Regenerated.

	* locale/iso-3166.def: Add Aaland Islands and Montenegro.

	[BZ #3273]
	* nscd/nscd_initgroups.c (__nscd_getgrouplist): It is OK to have
	found no group members.
	Patch by Petr Baudis.

2006-09-29  Jakub Jelinek  <jakub@redhat.com>

	* elf/rtld.c (_dl_start_final): If not USE___THREAD, don't
	assert bootstrap_map.l_tls_modid is zero.
	(_dl_start): Initialize bootstrap_map.l_tls_modid to 0
	if USE___THREAD.

2006-09-27  Ulrich Drepper  <drepper@redhat.com>

	* libio/stdio.h: Move open_wmemstream prototype to ...
	* wcsmbs/wchar.h: ... here.

2006-09-25  Jakub Jelinek  <jakub@redhat.com>

	[BZ #3252]
	* sysdeps/unix/sysv/linux/powerpc/fchownat.c (fchownat): Handle only
	fchownat syscall and __ASSUME_LCHOWN_SYSCALL case inline, call
	__{,l}chown to handle the rest.
	* sysdeps/unix/sysv/linux/i386/fchownat.c (fchownat): Handle only
	fchownat syscall and __ASSUME_32BITUIDS case inline, call
	__{,l}chown to handle the rest.
	* sysdeps/unix/sysv/linux/sparc/sparc32/fchownat.c: Include
	i386/fchownat.c.
	* sysdeps/unix/sysv/linux/s390/s390-32/fchownat.c: Likewise.
	* sysdeps/unix/sysv/linux/sh/fchownat.c: Likewise.

	[BZ #3253]
	* posix/glob.c (glob_in_dir): Don't alloca one struct globlink at a
	time, rather allocate increasingly bigger arrays of pointers, if
	possible with alloca, if too large with malloc.

2006-09-24  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/powerpc/fpu/libm-test-ulps: Updated.

	* sysdeps/ieee754/ldbl-128/s_lrintl.c (__lrintl): Fix 2 typos.

2006-09-24  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c (rfc3484_sort): Implement rule 4,
	home addresses.
	* sysdeps/unix/sysv/linux/check_pf.c (make_request): Recognize
	IFA_F_HOMEADDRESS flag for interfaces.